[Fix] Horizontal Scroll

--- a/src/components/horizontalSection/horizontal-seciton.module.css
+++ b/src/components/horizontalSection/horizontal-seciton.module.css
@@ -655,7 +655,11 @@
     width: 70%;
   }
   .titleBlock {
-    font-size: 5vw;
+    font-size: 4.5vw;
+  }
+
+  .indexBlock{
+    font-size: 13vw;
   }
 
   .committedSubtitle {
